src/z80asm/z80asm2/t/30-directive/expected/undef_21.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/30-directive//input/undef_21.asm
Assembling t/30-directive/input/undef_21.asm...
t/30-directive/input/undef_21.asm:1:6: error: Expected macro name after UNDEF
    undef ; no name
         ^
t/30-directive/input/undef_21.asm:2:13: error: Unexpected token after UNDEF: world
    hello undef world ; extra tokens
                ^
# file: t/30-directive/input/undef_21.asm
EndOfLine	"\n"	3:1	
